tests/fixtures/invalid/void_pointer_return.c
void *make(void) {
    return 0;
}
